fix article container display on mobile, refactored codes

--- a/styles.css
+++ b/styles.css
@@ -55,28 +55,25 @@ h2.typing-text {
   margin: 0;
 }
 
+
 .projects-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px; /* Adjust the gap between cards as needed */
-}
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 10px;
+    margin: 10px;
+  }
 
-.project-card {
-  flex: 0 0 calc(25% - 10px);
-  max-width: 100%;
-  background-color: #f0f0f0;
-  padding: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-}
+  .project-card {
+    background-color: #f0f0f0;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+  }
 
-.project-card h3 {
-  font-size: 30px;
-}
-
-.project-card p {
-}
-
+  .project-card h3 {
+    font-size: 30px;
+  }
+  
 .top-read {
   display: inline-flex;
   margin-bottom: 10px;
@@ -97,37 +94,64 @@ h2.typing-text {
   font-size: 13px;
 }
 
-.article-container {
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
 
-.articles-container {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-  gap: 10px;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE and Edge */
-}
+@media (max-width: 767px) {
+    .articles-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        margin: 0 10px;
+      }
+
+      .article-card {
+        flex-basis: 100%;
+        max-width: calc(100% - 20px);
+      }
+    
+    .article-card {
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+    }
+
+  }
   
-.articles-container::-webkit-scrollbar {
-  display: none;
-}
+/* Desktop and laptops */
+    @media (min-width: 768px) {
+      .article-container {
+        margin-top: 50px;
+        margin-bottom: 50px;
+      }
 
-.article-card {
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-right: 10px;
-  padding: 10px;
-  min-width: 300px;
-  max-width: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  cursor: pointer;
-}
+      .articles-container {
+        display: flex;
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        gap: 10px;
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none; /* IE and Edge */
+      }
+
+      .articles-container::-webkit-scrollbar {
+        display: none;
+      }
+
+      .article-card {
+        border: 1px solid #ddd;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        margin-right: 10px;
+        padding: 10px;
+        min-width: 300px;
+        max-width: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+      }
+    }
 
 .article-card:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -145,6 +169,21 @@ h2.typing-text {
   color: #aaa;
 }
 
+.article-card.selected {
+  border: 2px solid blue;
+  box-shadow: 0 0 5px blue;
+}
+
+.read-now-btn {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  flex: 1;
+}
+
 .arrow-container {
   display: flex;
   justify-content: center;
@@ -157,23 +196,10 @@ h2.typing-text {
   margin: 5px;
 }
 
-.article-card.selected {
-  border: 2px solid blue;
-  box-shadow: 0 0 5px blue;
-}
+
 
 .button-container {
   text-align: center;
-}
-
-.read-now-btn {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 8px 12px;
-  border-radius: 5px;
-  cursor: pointer;
-  flex: 1;
 }
 
 .buttons-container {
